# EVA

./: .clang-format  CMakeLists.txt  README.md
EVA/: main.cpp
EVA/include/: EVA.h
EVA/include/CFG/: CFG.h  CFGBuilder.h
EVA/include/llvm/: LLVM.h
EVA/sample/CFG/: main.c  main.ll
EVA/sample/basic-c/: main.c  main.ll
EVA/src/: EVA.cpp
EVA/src/CFG/: CFGBuilder.cpp
EVA/src/llvm/: LLVM.cpp
EVA/test/CFG/: main.cpp
VEA/: main.cpp
